--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R: c(person('Thomas', 'Walsh', role=c('aut', 'cre'), email='tw164@proton
 Author: Thomas Walsh
 Depends: R (>= 3.0.2)
 Description: This package contains some utility functions for doing QTL analysis with R/qtl.
+Encoding: UTF-8
 LazyData: true
 License: GPL-3
 URL: https://github.com/gact/utl
